--- a/Project.toml
+++ b/Project.toml
@@ -19,3 +19,11 @@ TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 
 [compat]
 Nemo = "0.24, 0.25"
+AbstractAlgebra = "0.18, 0.19"
+MacroTools = "0.5"
+Singular = "0.5"
+TestSetExtensions = "2"
+IterTools = "1"
+GroebnerBasis = "0.1, 0.2, 0.3"
+Primes = "0.5"
+
