--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 
 [compat]
-Nemo = "0.24, 0.25"
+Nemo = "0.20-0.25"
 AbstractAlgebra = "0.18, 0.19"
 MacroTools = "0.5"
 Singular = "0.5"
