--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 Nemo = "0.20, 0.24, 0.25"
 AbstractAlgebra = "0.18, 0.19"
 MacroTools = "0.5"
-Singular = "0.5"
+Singular = "0.4, 0.5"
 TestSetExtensions = "2"
 IterTools = "1"
 GroebnerBasis = "0.1, 0.2, 0.3"
