--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 
 [compat]
 Nemo = "0.20, 0.24, 0.25"
-AbstractAlgebra = "0.18, 0.19"
+AbstractAlgebra = "0.13, 0.18, 0.19"
 MacroTools = "0.5"
 Singular = "0.4, 0.5"
 TestSetExtensions = "2"
