--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 Singular = "bcd08a7b-43d2-5ff7-b6d4-c458787f915c"
@@ -22,6 +23,7 @@ AbstractAlgebra = "0.13, 0.18, 0.19, 0.20, 0.21"
 GroebnerBasis = "0.1, 0.2, 0.3"
 IterTools = "1"
 MacroTools = "0.5"
+ModelingToolkit = "3, 4, 5"
 Nemo = "0.20, 0.24, 0.25, 0.26"
 Primes = "0.5"
 Singular = "0.4, 0.5"
