--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ AbstractAlgebra = "0.13, 0.18, 0.19, 0.20, 0.21"
 GroebnerBasis = "0.1, 0.2, 0.3"
 IterTools = "1"
 MacroTools = "0.5"
-ModelingToolkit = "3, 4, 5"
+ModelingToolkit = "3, 4, 5, 6"
 Nemo = "0.20, 0.24, 0.25, 0.26"
 Primes = "0.5"
 Singular = "0.4, 0.5"
