--- a/Project.toml
+++ b/Project.toml
@@ -28,8 +28,8 @@ IterTools = "1"
 MacroTools = "0.5"
 ModelingToolkit = "7, 8"
 Nemo = "0.24, 0.25, 0.26, 0.27, 0.28"
+Oscar = "0.7"
 Primes = "0.5"
-"Oscar" = "0.6, 0.7"
 Singular = "0.4, 0.5, 0.6, 0.7, 0.8, 0.9"
 SpecialFunctions = "1, 2"
 TestSetExtensions = "2"
