--- a/Project.toml
+++ b/Project.toml
@@ -17,8 +17,6 @@ Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 Singular = "bcd08a7b-43d2-5ff7-b6d4-c458787f915c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 
 [compat]
 AbstractAlgebra = "0.13, 0.18, 0.19, 0.20, 0.21, 0.22, 0.23"
@@ -33,3 +31,11 @@ Singular = "0.4, 0.5, 0.6, 0.7, 0.8, 0.9"
 SpecialFunctions = "1, 2"
 TestSetExtensions = "2"
 julia = "1.6"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+
+[targets]
+test = ["Test", "TestSetExtensions", "BenchmarkTools"]
