--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,8 @@ AbstractAlgebra = "c3fe647b-3220-5bb0-a1ea-a7954cac585d"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-GroebnerBasis = "e39c9192-ea4d-5e15-9584-a488c6d614bd"
+Groebner = "0b43b601-686d-58a3-8a1c-6623616c7cd4"
+Hecke = "3e1990a7-5d81-5526-99ce-9ba3ff248f21"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
@@ -25,7 +26,6 @@ TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 AbstractAlgebra = "0.13, 0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25"
 BenchmarkTools = "1"
 DataStructures = "0.18"
-GroebnerBasis = "0.1, 0.2, 0.3"
 IterTools = "1"
 MacroTools = "0.5"
 ModelingToolkit = "7, 8"
