--- a/Project.toml
+++ b/Project.toml
@@ -34,6 +34,7 @@ Primes = "0.5"
 Singular = "0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.10"
 SpecialFunctions = "1, 2"
 TestSetExtensions = "2"
+Groebner="0.2.4"
 julia = "1.6"
 
 [extras]
