--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ Singular = "0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.10"
 SpecialFunctions = "1, 2"
 TestSetExtensions = "2"
 Groebner="0.2.4"
-julia = "1.6"
+julia = "1.6, 1.7"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
