--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -7,25 +7,37 @@ on:
     - 'Dockerfile'
     - '.gitignore'
 jobs:
-  run-tests:
-    runs-on: ${{ matrix.os }}
+  test:
+    runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.group == 'Downstream' }}
     strategy:
+      fail-fast: false
       matrix:
+        group:
+          - Core
         version:
           - '1'
           - '1.6'
-        julia-arch: [x64]
-        os: [macos-latest, ubuntu-latest, windows-latest]
-
     steps:
-      - name: "Checkout"
-        uses: actions/checkout@v2
-      - name: "Setup Julia"
-        uses: julia-actions/setup-julia@v1
+      - uses: actions/checkout@v2
+      - uses: julia-actions/setup-julia@v1
         with:
-          version: ${{ matrix.julia-version }}
-          arch: ${{ matrix.julia-arch }} 
-      - name: "Build Package"
-        uses: julia-actions/julia-buildpkg@latest
-      - name: "Run tests"
-        uses: julia-actions/julia-runtest@latest
+          version: ${{ matrix.version }}
+      - uses: actions/cache@v1
+        env:
+          cache-name: cache-artifacts
+        with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-runtest@v1
+        env:
+          GROUP: ${{ matrix.group }}
+      - uses: julia-actions/julia-processcoverage@v1
+      - uses: codecov/codecov-action@v1
+        with:
+          file: lcov.info
