--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: ['1.7']
+        julia-version: ['1.6', '1.7']
         julia-arch: [x64]
         os: [macos-latest, ubuntu-latest, windows-latest]
 
