--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -4,4 +4,6 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 
 [compat]
+BenchmarkTools = "1.3"
 Documenter = "0.27"
+ModelingToolkit = "8.34"
