--- a/dev/assets/Project.toml
+++ b/dev/assets/Project.toml
@@ -5,4 +5,6 @@ ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 StructuralIdentifiability = "220ca800-aa68-49bb-acd8-6037fa93a544"
 
 [compat]
+BenchmarkTools = "1.3"
 Documenter = "0.27"
+ModelingToolkit = "8.34"
