Update to new version of SymbolicsUtils based on Ilia's code

--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,8 @@ ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 
@@ -31,6 +33,8 @@ ModelingToolkit = "7, 8"
 Nemo = "0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32"
 Primes = "0.5"
 SpecialFunctions = "1, 2"
+Symbolics = "5"
+SymbolicUtils = "1"
 TestSetExtensions = "2"
 julia = "1.6, 1.7"
 
