--- a/Project.toml
+++ b/Project.toml
@@ -26,15 +26,15 @@ TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 AbstractAlgebra = "0.13, 0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 0.26, 0.27"
 BenchmarkTools = "1"
 DataStructures = "0.18"
-Groebner = "0.2"
+Groebner = "0.2, 0.3"
 IterTools = "1"
 MacroTools = "0.5"
 ModelingToolkit = "7, 8"
 Nemo = "0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32"
 Primes = "0.5"
 SpecialFunctions = "1, 2"
-Symbolics = "5"
 SymbolicUtils = "1"
+Symbolics = "5"
 TestSetExtensions = "2"
 julia = "1.6, 1.7"
 
