CompatHelper: bump compat for Nemo to 0.33, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ Groebner = "0.2, 0.3"
 IterTools = "1"
 MacroTools = "0.5"
 ModelingToolkit = "7, 8"
-Nemo = "0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32"
+Nemo = "0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32, 0.33"
 Primes = "0.5"
 SpecialFunctions = "1, 2"
 SymbolicUtils = "1"
