Scratch some random code

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,7 @@ docs/site/
 # environment.
 Manifest.toml
 
+# VSCode settings
+.vscode/
+
 # End of https://www.toptal.com/developers/gitignore/api/julia
