--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ Groebner = "0.2, 0.3"
 IterTools = "1"
 MacroTools = "0.5"
 ModelingToolkit = "7, 8"
-Nemo = "0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32, 0.33, 0.34"
+Nemo = "0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32, 0.33, 0.34, 0.35"
 PrecompileTools = "1"
 Primes = "0.5"
 SpecialFunctions = "1, 2"
