CompatHelper: bump compat for AbstractAlgebra to 0.31, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [compat]
-AbstractAlgebra = "0.13, 0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30"
+AbstractAlgebra = "0.13, 0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31"
 BenchmarkTools = "1"
 DataStructures = "0.18"
 Groebner = "0.2, 0.3"
