--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 ParamPunPam = "3e851597-e36f-45a9-af0a-b7781937992f"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
