--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,5 +5,5 @@ ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 
 [compat]
 BenchmarkTools = "1.3"
-Documenter = "0.27"
+Documenter = "0.27, 1"
 ModelingToolkit = "8.34"
