--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 [compat]
 AbstractAlgebra = "0.13, 0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32"
 BenchmarkTools = "1"
+Combinatorics = "1"
 DataStructures = "0.18"
 Groebner = "0.4"
 IterTools = "1"
