--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ Groebner = "0.4"
 IterTools = "1"
 MacroTools = "0.5"
 ModelingToolkit = "7, 8"
-Nemo = "0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32, 0.33, 0.34, 0.35, 0.36"
+Nemo = "0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32, 0.33, 0.34, 0.35, 0.36, 0.37"
 ParamPunPam = "0.1"
 PrecompileTools = "1"
 Primes = "0.5"
