--- a/Project.toml
+++ b/Project.toml
@@ -29,12 +29,12 @@ AbstractAlgebra = "0.13, 0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 0.26, 0
 BenchmarkTools = "1"
 Combinatorics = "1"
 DataStructures = "0.18"
-Groebner = "0.4"
+Groebner = "0.4, 0.5"
 IterTools = "1"
 MacroTools = "0.5"
 ModelingToolkit = "7, 8"
 Nemo = "0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32, 0.33, 0.34, 0.35, 0.36, 0.37"
-ParamPunPam = "0.1, 0.2"
+ParamPunPam = "0.2"
 PrecompileTools = "1"
 Primes = "0.5"
 SpecialFunctions = "1, 2"
