--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ AbstractAlgebra = "0.13, 0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 0.26, 0
 BenchmarkTools = "1"
 Combinatorics = "1"
 DataStructures = "0.18"
-Groebner = "0.4"
+Groebner = "0.4, 0.5"
 IterTools = "1"
 MacroTools = "0.5"
 ModelingToolkit = "7, 8"
