adding compats for standard libraries

--- a/Project.toml
+++ b/Project.toml
@@ -42,6 +42,10 @@ SymbolicUtils = "1"
 Symbolics = "5"
 TestSetExtensions = "2"
 julia = "1.6, 1.7"
+Dates = "1.6, 1.7"
+Random = "1.6, 1.7"
+Logging = "1.6, 1.7"
+LinearAlgebra = "1.6, 1.7"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
