--- a/Project.toml
+++ b/Project.toml
@@ -46,6 +46,7 @@ SpecialFunctions = "1, 2"
 SymbolicUtils = "1"
 Symbolics = "5"
 TestSetExtensions = "2"
+TimerOutputs = "0.5"
 julia = "1.6, 1.7"
 
 [extras]
