--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,6 @@ version = "0.5.1"
 
 [deps]
 AbstractAlgebra = "c3fe647b-3220-5bb0-a1ea-a7954cac585d"
-BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -27,8 +26,9 @@ TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [compat]
 AbstractAlgebra = "0.13, 0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32, 0.33, 0.34"
-BenchmarkTools = "1"
+Aqua = "0.8"
 Combinatorics = "1"
+CPUSummary = "0.2"
 DataStructures = "0.18"
 Dates = "1.6, 1.7"
 Groebner = "0.4, 0.5"
@@ -45,14 +45,16 @@ Random = "1.6, 1.7"
 SpecialFunctions = "1, 2"
 SymbolicUtils = "1"
 Symbolics = "5"
+Test = "1"
 TestSetExtensions = "2"
 TimerOutputs = "0.5"
 julia = "1.6, 1.7"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 
 [targets]
-test = ["CPUSummary", "Test", "TestSetExtensions"]
+test = ["Aqua", "CPUSummary", "Test", "TestSetExtensions"]
