--- a/.github/workflows/Downgrade.yml
+++ b/.github/workflows/Downgrade.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: cjdoris/julia-downgrade-compat-action@v1
 #        if: ${{ matrix.version == '1.6' }}
         with:
-        # skip standard libraries
-          skip: Pkg,TOML,Logging,Random,Dates
+        # skip standard libraries..
+          skip: Pkg,TOML,Logging,Random,Dates,LinearAlgebra
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
