--- a/.github/workflows/Downgrade.yml
+++ b/.github/workflows/Downgrade.yml
@@ -26,5 +26,6 @@ jobs:
         with:
         # skip standard libraries..
           skip: Pkg,TOML,Logging,Random,Dates,LinearAlgebra
+          strict: 'false'
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
