--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ LinearAlgebra = "1.6, 1.7"
 Logging = "1.6, 1.7"
 MacroTools = "0.5"
 ModelingToolkit = "7, 8"
-Nemo = "0.24, 0.25, 0.26, 0.27, 0.28, 0.29, 0.30, 0.31, 0.32, 0.33, 0.34, 0.35, 0.36, 0.37, 0.38"
+Nemo = "0.32, 0.33, 0.34, 0.35, 0.36, 0.37, 0.38"
 ParamPunPam = "0.2"
 PrecompileTools = "1"
 Primes = "0.5"
