CompatHelper: bump compat for Groebner to 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ BenchmarkTools = "1"
 Combinatorics = "1"
 DataStructures = "0.18"
 Dates = "1.6, 1.7"
-Groebner = "0.4, 0.5"
+Groebner = "0.4, 0.5, 0.6"
 IterTools = "1"
 LinearAlgebra = "1.6, 1.7"
 Logging = "1.6, 1.7"
