--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ MacroTools = "0.5"
 ModelingToolkit = "8.51"
 Nemo = "0.32, 0.33, 0.34, 0.35, 0.36, 0.37, 0.38, 0.39"
 ParamPunPam = "0.2"
-PrecompileTools = "1"
+PrecompileTools = "1.1, 1.2"
 Primes = "0.5"
 Random = "1.6, 1.7"
 SpecialFunctions = "1, 2"
