--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,6 +36,8 @@ jobs:
         env:
           GROUP: ${{ matrix.group }}
           JULIA_NUM_THREADS: 11
+        with:
+          depwarn: yes
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v3
         with:
