--- a/Project.toml
+++ b/Project.toml
@@ -31,14 +31,14 @@ BenchmarkTools = "1"
 Combinatorics = "1"
 DataStructures = "0.18"
 Dates = "1.6, 1.7"
-Groebner = "0.4, 0.5, 0.6"
+Groebner = "0.6.3"
 IterTools = "1"
 LinearAlgebra = "1.6, 1.7"
 Logging = "1.6, 1.7"
 MacroTools = "0.5"
 ModelingToolkit = "8.51"
 Nemo = "0.32, 0.33, 0.34, 0.35, 0.36, 0.37, 0.38, 0.39"
-ParamPunPam = "0.2"
+ParamPunPam = "0.3.1"
 PrecompileTools = "1.1, 1.2"
 Primes = "0.5"
 Random = "1.6, 1.7"
@@ -47,7 +47,7 @@ SymbolicUtils = "1"
 Symbolics = "5.5"
 TestSetExtensions = "2"
 TimerOutputs = "0.5"
-julia = "1.6, 1.7"
+julia = "1.6"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
