--- a/Project.toml
+++ b/Project.toml
@@ -37,7 +37,7 @@ LinearAlgebra = "1.6, 1.7"
 Logging = "1.6, 1.7"
 MacroTools = "0.5"
 ModelingToolkit = "8.51"
-Nemo = "0.32, 0.33, 0.34, 0.35, 0.36, 0.37, 0.38, 0.39"
+Nemo = "0.38.3, 0.39"
 ParamPunPam = "0.3.1"
 PrecompileTools = "1.1, 1.2"
 Primes = "0.5"
