--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ ParamPunPam = "0.3.1"
 PrecompileTools = "1.1, 1.2"
 Primes = "0.5"
 Random = "1.6, 1.7"
-SpecialFunctions = "1, 2"
+SpecialFunctions = "2"
 SymbolicUtils = "1.5"
 Symbolics = "5.16"
 TestSetExtensions = "2"
