--- a/Project.toml
+++ b/Project.toml
@@ -30,18 +30,18 @@ AbstractAlgebra = "0.34.5, 0.35"
 BenchmarkTools = "1"
 Combinatorics = "1"
 DataStructures = "0.18"
-Dates = "1.6, 1.7"
+Dates = "1.6"
 Groebner = "0.6.3"
 IterTools = "1"
-LinearAlgebra = "1.6, 1.7"
-Logging = "1.6, 1.7"
+LinearAlgebra = "1.6"
+Logging = "1.6"
 MacroTools = "0.5"
-ModelingToolkit = "8.51"
+ModelingToolkit = "8.75"
 Nemo = "0.38.3, 0.39"
 ParamPunPam = "0.3.1"
 PrecompileTools = "1.1, 1.2"
 Primes = "0.5"
-Random = "1.6, 1.7"
+Random = "1.6"
 SpecialFunctions = "2"
 SymbolicUtils = "1.5"
 Symbolics = "5.16"
