--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ Logging = "1.6, 1.7"
 MacroTools = "0.5"
 ModelingToolkit = "8.51"
 Nemo = "0.32, 0.33, 0.34, 0.35, 0.36, 0.37, 0.38, 0.39"
-ParamPunPam = "0.2"
+ParamPunPam = "0.2, 0.3"
 PrecompileTools = "1.1, 1.2"
 Primes = "0.5"
 Random = "1.6, 1.7"
