--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         group:
           - Core
+          - ModelingToolkitExt
         version:
           - '1'
           - '1.6'
