--- a/Project.toml
+++ b/Project.toml
@@ -51,7 +51,7 @@ PrecompileTools = "1.1, 1.2"
 Primes = "0.5"
 Random = "1.6, 1.7"
 SpecialFunctions = "1, 2"
-SymbolicUtils = "1"
+SymbolicUtils = "1.2, 1.3, 1.4, 1.5"
 Symbolics = "5.5"
 TestSetExtensions = "2"
 TimerOutputs = "0.5"
@@ -66,4 +66,4 @@ SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [targets]
-test = ["CPUSummary", "Test", "TestSetExtensions", "ModelingToolkit"]
+test = ["CPUSummary", "Test", "TestSetExtensions"]
