pkg into the deps for testing

--- a/Project.toml
+++ b/Project.toml
@@ -59,7 +59,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 
 [targets]
-test = ["CPUSummary", "Test", "TestSetExtensions"]
+test = ["CPUSummary", "Pkg", "Test", "TestSetExtensions"]
 
 [weakdeps]
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
