--- a/Project.toml
+++ b/Project.toml
@@ -45,7 +45,7 @@ MacroTools = "0.5"
 ModelingToolkit = "8.74"
 Nemo = "0.38.3, 0.39"
 ParamPunPam = "0.3.1"
-PrecompileTools = "1.1, 1.2"
+PrecompileTools = "1.2"
 Primes = "0.5"
 Random = "1.6, 1.7"
 SpecialFunctions = "2"
