--- a/Project.toml
+++ b/Project.toml
@@ -49,7 +49,7 @@ PrecompileTools = "1.2"
 Primes = "0.5"
 Random = "1.6, 1.7"
 SpecialFunctions = "2"
-SymbolicUtils = "1.2, 1.3, 1.4, 1.5"
+SymbolicUtils = "1.4, 1.5"
 Symbolics = "5.16"
 TestSetExtensions = "2"
 TimerOutputs = "0.5"
