CompatHelper: add new compat entry for Requires at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -48,6 +48,7 @@ ParamPunPam = "0.3.1"
 PrecompileTools = "1.2"
 Primes = "0.5"
 Random = "1.6, 1.7"
+Requires = "1"
 SpecialFunctions = "2"
 SymbolicUtils = "1.4, 1.5"
 Symbolics = "5.16"
