--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,6 @@ version = "0.5.2"
 
 [deps]
 AbstractAlgebra = "c3fe647b-3220-5bb0-a1ea-a7954cac585d"
-BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -32,8 +31,9 @@ ModelingToolkitExt = ["ModelingToolkit", "SymbolicUtils", "Symbolics"]
 
 [compat]
 AbstractAlgebra = "0.34.5, 0.35"
-BenchmarkTools = "1"
+Aqua = "0.8"
 Combinatorics = "1"
+CPUSummary = "0.2"
 DataStructures = "0.18"
 Dates = "1.6, 1.7"
 Groebner = "0.6.3"
@@ -44,17 +44,20 @@ MacroTools = "0.5"
 ModelingToolkit = "8.74"
 Nemo = "0.38.3, 0.39"
 ParamPunPam = "0.3.1"
+Pkg = "1.6, 1.7"
 PrecompileTools = "1.2"
 Primes = "0.5"
 Random = "1.6, 1.7"
 SpecialFunctions = "2"
 SymbolicUtils = "1.4, 1.5"
 Symbolics = "5.16"
+Test = "1.6, 1.7"
 TestSetExtensions = "2"
 TimerOutputs = "0.5"
 julia = "1.6, 1.7"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
@@ -64,4 +67,4 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 
 [targets]
-test = ["CPUSummary", "Pkg", "Test", "TestSetExtensions"]
+test = ["Aqua", "CPUSummary", "Pkg", "SpecialFunctions", "Test", "TestSetExtensions"]
