--- a/.github/workflows/Downgrade.yml
+++ b/.github/workflows/Downgrade.yml
@@ -25,7 +25,7 @@ jobs:
 #        if: ${{ matrix.version == '1.6' }}
         with:
         # skip standard libraries..
-          skip: Pkg,TOML,Logging,Random,Dates,LinearAlgebra
+          skip: Pkg,TOML,Logging,Random,Dates,LinearAlgebra,Test,Compat,Aqua
           strict: 'false'
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
