at least fixing SpellCheck

--- a/.github/workflows/SpellCheck.yml
+++ b/.github/workflows/SpellCheck.yml
@@ -1,8 +1,8 @@
-iname: Spell Check
+name: Spell Check
 
- on: [pull_request]
+on: [pull_request]
 
- jobs:
+jobs:
    typos-check:
      name: Spell Check with Typos
      runs-on: ubuntu-latest
