--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 ModelingToolkitExt = ["ModelingToolkit", "SymbolicUtils", "Symbolics"]
 
 [compat]
-AbstractAlgebra = "0.34.5, 0.35"
+AbstractAlgebra = "0.34.5, 0.35, 0.37"
 BenchmarkTools = "1"
 Combinatorics = "1"
 DataStructures = "0.18"
