--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ LinearAlgebra = "1.6, 1.7"
 Logging = "1.6, 1.7"
 MacroTools = "0.5"
 ModelingToolkit = "8.74"
-Nemo = "0.38.3, 0.39"
+Nemo = "0.38.3, 0.39, 0.41"
 ParamPunPam = "0.3.1"
 PrecompileTools = "1.2"
 Primes = "0.5"
