--- a/Project.toml
+++ b/Project.toml
@@ -31,8 +31,8 @@ ModelingToolkitExt = ["ModelingToolkit", "SymbolicUtils", "Symbolics"]
 [compat]
 AbstractAlgebra = "0.34.5, 0.35"
 Aqua = "0.8"
-Combinatorics = "1"
 CPUSummary = "0.2"
+Combinatorics = "1"
 DataStructures = "0.18"
 Dates = "1.6, 1.7"
 Groebner = "0.6.3"
@@ -65,6 +65,7 @@ SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 
 [targets]
-test = ["Aqua", "CPUSummary", "Pkg", "SpecialFunctions", "Test", "TestSetExtensions"]
+test = ["Aqua", "CPUSummary", "Pkg", "SpecialFunctions", "Test", "TestSetExtensions", "TOML"]
