compat for TOML

--- a/Project.toml
+++ b/Project.toml
@@ -53,6 +53,7 @@ Symbolics = "5.16"
 Test = "1.6, 1.7"
 TestSetExtensions = "2"
 TimerOutputs = "0.5"
+TOML = "1.6, 1.7"
 julia = "1.6, 1.7"
 
 [extras]
