--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 ModelingToolkitExt = ["ModelingToolkit", "SymbolicUtils", "Symbolics"]
 
 [compat]
-AbstractAlgebra = "0.34.5, 0.35"
+AbstractAlgebra = "0.34.5, 0.35, 0.36, 0.37"
 Aqua = "0.8"
 Combinatorics = "1"
 CPUSummary = "0.2"
