--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         group:
           - Core
-          - ModelingToolkitExt
+          - ModelingToolkitSIExt
         version:
           - '1'
           - '1.6'
