CompatHelper: bump compat for Groebner to 0.7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -31,11 +31,11 @@ ModelingToolkitSIExt = ["ModelingToolkit", "SymbolicUtils", "Symbolics"]
 [compat]
 AbstractAlgebra = "0.34.5, 0.35"
 Aqua = "0.8"
-Combinatorics = "1"
 CPUSummary = "0.2"
+Combinatorics = "1"
 DataStructures = "0.18"
 Dates = "1.6, 1.7"
-Groebner = "0.6.3"
+Groebner = "0.6.3, 0.7"
 IterTools = "1"
 LinearAlgebra = "1.6, 1.7"
 Logging = "1.6, 1.7"
