update Groebner.jl and PirlimPinPin.jl

--- a/Project.toml
+++ b/Project.toml
@@ -35,14 +35,14 @@ Combinatorics = "1"
 CPUSummary = "0.2"
 DataStructures = "0.18"
 Dates = "1.6, 1.7"
-Groebner = "0.6.3"
+Groebner = "0.6.3, 0.7"
 IterTools = "1"
 LinearAlgebra = "1.6, 1.7"
 Logging = "1.6, 1.7"
 MacroTools = "0.5"
 ModelingToolkit = "8.75"
 Nemo = "0.38.3, 0.39"
-ParamPunPam = "0.3.1"
+ParamPunPam = "0.3"
 Pkg = "1.6, 1.7"
 PrecompileTools = "1.2"
 Primes = "0.5"
