CompatHelper: bump compat for AbstractAlgebra to 0.38, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -29,10 +29,10 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 ModelingToolkitSIExt = ["ModelingToolkit", "SymbolicUtils", "Symbolics"]
 
 [compat]
-AbstractAlgebra = "0.34.5, 0.35"
+AbstractAlgebra = "0.34.5, 0.35, 0.38"
 Aqua = "0.8"
-Combinatorics = "1"
 CPUSummary = "0.2"
+Combinatorics = "1"
 DataStructures = "0.18"
 Dates = "1.6, 1.7"
 Groebner = "0.6.3, 0.7"
