--- a/Project.toml
+++ b/Project.toml
@@ -31,8 +31,8 @@ ModelingToolkitSIExt = ["ModelingToolkit", "SymbolicUtils", "Symbolics"]
 [compat]
 AbstractAlgebra = "0.34.5, 0.35, 0.36, 0.37, 0.38"
 Aqua = "0.8"
-Combinatorics = "1"
 CPUSummary = "0.2"
+Combinatorics = "1"
 DataStructures = "0.18"
 Dates = "1.6, 1.7"
 Groebner = "0.6.3, 0.7"
@@ -41,7 +41,7 @@ LinearAlgebra = "1.6, 1.7"
 Logging = "1.6, 1.7"
 MacroTools = "0.5"
 ModelingToolkit = "8.75"
-Nemo = "0.38.3, 0.39, 0.40, 0.41"
+Nemo = "0.38.3, 0.39, 0.40, 0.41, 0.42"
 ParamPunPam = "0.3"
 Pkg = "1.6, 1.7"
 PrecompileTools = "1.2"
