CompatHelper: bump compat for ParamPunPam to 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ Logging = "1.6, 1.7"
 MacroTools = "0.5"
 ModelingToolkit = "8.75"
 Nemo = "0.38.3, 0.39, 0.40, 0.41, 0.42, 0.43"
-ParamPunPam = "0.3"
+ParamPunPam = "0.3, 0.4"
 Pkg = "1.6, 1.7"
 PrecompileTools = "1.2"
 Primes = "0.5"
