--- a/Project.toml
+++ b/Project.toml
@@ -41,7 +41,7 @@ LinearAlgebra = "1.6, 1.7"
 Logging = "1.6, 1.7"
 MacroTools = "0.5"
 ModelingToolkit = "9"
-Nemo = "0.43, 0.44"
+Nemo = "0.43"
 ParamPunPam = "0.4"
 Pkg = "1.6, 1.7"
 PrecompileTools = "1.2"
