--- a/Project.toml
+++ b/Project.toml
@@ -53,7 +53,7 @@ Symbolics = "5.20"
 Test = "1.6, 1.7"
 TestSetExtensions = "2"
 TimerOutputs = "0.5"
-julia = "<1.10.3, > 1.10.3"
+julia = "<1.10.3, ≥1.10.4"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
