--- a/Project.toml
+++ b/Project.toml
@@ -48,8 +48,8 @@ PrecompileTools = "1.2"
 Primes = "0.5"
 Random = "1.6, 1.7"
 SpecialFunctions = "2"
-SymbolicUtils = "1.4, 1.5, 2"
-Symbolics = "5.20"
+SymbolicUtils = "2"
+Symbolics = "5.30.1"
 Test = "1.6, 1.7"
 TestSetExtensions = "2"
 TimerOutputs = "0.5"
