--- a/Project.toml
+++ b/Project.toml
@@ -49,7 +49,7 @@ Primes = "0.5"
 Random = "1.6, 1.7"
 SpecialFunctions = "2"
 SymbolicUtils = "2"
-Symbolics = "5.30.1"
+Symbolics = "5.30.1, 6"
 Test = "1.6, 1.7"
 TestSetExtensions = "2"
 TimerOutputs = "0.5"
