--- a/.github/workflows/SpellCheck.yml
+++ b/.github/workflows/SpellCheck.yml
@@ -11,3 +11,5 @@ jobs:
          uses: actions/checkout@v4
        - name: Check spelling
          uses: crate-ci/typos@v1.22.0
+         with:
+           files: ./src
