--- a/.github/workflows/SpellCheck.yml
+++ b/.github/workflows/SpellCheck.yml
@@ -12,4 +12,4 @@ jobs:
        - name: Check spelling
          uses: crate-ci/typos@v1.22.0
          with:
-           files: ./src
+           files: ./src ./docs
