trying sharpen symbolicutils

--- a/Project.toml
+++ b/Project.toml
@@ -48,7 +48,7 @@ PrecompileTools = "1.2"
 Primes = "0.5"
 Random = "1.6, 1.7"
 SpecialFunctions = "2"
-SymbolicUtils = "2, 3"
+SymbolicUtils = "3"
 Symbolics = "5.30.1, 6"
 Test = "1.6, 1.7"
 TestSetExtensions = "2"
