--- a/Project.toml
+++ b/Project.toml
@@ -41,7 +41,7 @@ LinearAlgebra = "1.6, 1.7"
 Logging = "1.6, 1.7"
 MacroTools = "0.5"
 ModelingToolkit = "9.33"
-Nemo = "0.43, 0.44, 0.45, 0.46"
+Nemo = "0.43, 0.44, 0.45, 0.46, 0.47"
 ParamPunPam = "0.4"
 Pkg = "1.6, 1.7"
 PrecompileTools = "1.2"
