CompatHelper: bump compat for Groebner to 0.8, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ CPUSummary = "0.2"
 Combinatorics = "1"
 DataStructures = "0.18"
 Dates = "1.6, 1.7"
-Groebner = "0.7.3"
+Groebner = "0.7.3, 0.8"
 IterTools = "1"
 LinearAlgebra = "1.6, 1.7"
 Logging = "1.6, 1.7"
