--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 ModelingToolkitSIExt = ["ModelingToolkit", "SymbolicUtils", "Symbolics"]
 
 [compat]
-AbstractAlgebra = "0.40, 0.41, 0.42, 0.43"
+AbstractAlgebra = "0.40, 0.41, 0.42, 0.43, 0.44"
 Aqua = "0.8"
 CPUSummary = "0.2"
 Combinatorics = "1"
