--- a/Project.toml
+++ b/Project.toml
@@ -53,7 +53,7 @@ Symbolics = "6.2"
 Test = "1.10, 1.11"
 TestSetExtensions = "2"
 TimerOutputs = "0.5"
-julia = "1.10.0-1.10.2, 1.10.4, 1.11.2"
+julia = "1.10.4, 1.11.2"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
