--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 ModelingToolkitSIExt = ["ModelingToolkit", "SymbolicUtils", "Symbolics"]
 
 [compat]
-AbstractAlgebra = "0.40, 0.41, 0.42, 0.43, 0.44"
+AbstractAlgebra = "0.41, 0.42, 0.43, 0.44"
 Aqua = "0.8"
 CPUSummary = "0.2"
 Combinatorics = "1"
@@ -41,7 +41,7 @@ LinearAlgebra = "1.10, 1.11"
 Logging = "1.10, 1.11"
 MacroTools = "0.5"
 ModelingToolkit = "9.33"
-Nemo = "0.43, 0.44, 0.45, 0.46, 0.47, 0.48"
+Nemo = "0.45.4, 0.46, 0.47, 0.48"
 ParamPunPam = "0.5"
 Pkg = "1.10, 1.11"
 PrecompileTools = "1.2"
