--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ CPUSummary = "0.2"
 Combinatorics = "1"
 DataStructures = "0.18"
 Dates = "1.10, 1.11"
-Groebner = "0.8.1"
+Groebner = "0.8.1, 0.9"
 IterTools = "1"
 LinearAlgebra = "1.10, 1.11"
 Logging = "1.10, 1.11"
