fixing folder name + formatting

--- a/.github/workflows/PerformanceCheck.yml
+++ b/.github/workflows/PerformanceCheck.yml
@@ -26,4 +26,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.BENCHMARK_KEY }}
         PR_NUMBER: ${{ github.event.number }}
-      run: julia --threads=4 --project=./benchmark/CI-scripts ./benchmark/CI-scripts/runtests.jl 2
+      run: julia --threads=4 --project=./benchmarking/CI-scripts ./benchmarking/CI-scripts/runtests.jl 2
