--- a/benchmarking/CI-scripts/run-on-nightly/Project.toml
+++ b/benchmarking/CI-scripts/run-on-nightly/Project.toml
@@ -4,4 +4,4 @@ GitHub = "bc5e4493-9b4d-5f90-b8aa-2b2bcaad7a26"
 GitHubActions = "6b79fd1a-b13a-48ab-b6b0-aaee1fee41df"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
-StructuralIdentifiability = "220ca800-aa68-49bb-acd8-6037fa93a544"
+TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
