--- a/benchmarking/CI-scripts/Project.toml
+++ b/benchmarking/CI-scripts/Project.toml
@@ -2,6 +2,7 @@
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 GitHub = "bc5e4493-9b4d-5f90-b8aa-2b2bcaad7a26"
 GitHubActions = "6b79fd1a-b13a-48ab-b6b0-aaee1fee41df"
+Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
