making the performance workflow optional and manually runnable, maybe

--- a/.github/workflows/PerformanceCheck.yml
+++ b/.github/workflows/PerformanceCheck.yml
@@ -1,10 +1,6 @@
 name: Performance Check
 on:
-  push:
-    branches:
-      - 'master'
-    tags: '*'
-  pull_request:
+  workflow_dispatch:
 jobs:
   build-and-benchmark:
     runs-on: ${{ matrix.os }}
