--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ IterTools = "1"
 LinearAlgebra = "1.10, 1.11"
 Logging = "1.10, 1.11"
 MacroTools = "0.5"
-ModelingToolkit = "9.50"
+ModelingToolkit = "9.50, 10"
 Nemo = "0.46, 0.47, 0.48, 0.49, 0.50"
 ParamPunPam = "0.5"
 Pkg = "1.10, 1.11"
