--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -7,5 +7,5 @@ StructuralIdentifiability = "220ca800-aa68-49bb-acd8-6037fa93a544"
 [compat]
 BenchmarkTools = "1.3"
 Documenter = "0.27, 1"
-ModelingToolkit = "9"
+ModelingToolkit = "9, 10"
 StructuralIdentifiability = "0.5"
