--- a/Project.toml
+++ b/Project.toml
@@ -41,7 +41,7 @@ LinearAlgebra = "1.10, 1.11"
 Logging = "1.10, 1.11"
 MacroTools = "0.5"
 ModelingToolkit = "10"
-Nemo = "0.46, 0.47, 0.48, 0.49, 0.50, 0.51"
+Nemo = "0.46, 0.47, 0.48, 0.49, 0.50, 0.51, 0.52"
 ParamPunPam = "0.5"
 Pkg = "1.10, 1.11"
 PrecompileTools = "1.2"
