--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ ParamPunPam = "3e851597-e36f-45a9-af0a-b7781937992f"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+RationalFunctionFields = "73480bc8-48a2-41cc-880f-208b490ccf65"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [weakdeps]
@@ -47,6 +48,7 @@ Pkg = "1.10, 1.11"
 PrecompileTools = "1.2"
 Primes = "0.5"
 Random = "1.10, 1.11"
+RationalFunctionFields = "0.2.0"
 SpecialFunctions = "2"
 SymbolicUtils = "3.27"
 Symbolics = "6.40"
