--- a/.github/workflows/Downgrade.yml
+++ b/.github/workflows/Downgrade.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         group:
           - Core
-        downgrade_mode: ['deps']
+        mode: ['deps']
         julia-version: ['1.10']
     steps:
       - uses: actions/checkout@v5
