--- a/Project.toml
+++ b/Project.toml
@@ -48,7 +48,7 @@ Pkg = "1.10, 1.11"
 PrecompileTools = "1.2"
 Primes = "0.5"
 Random = "1.10, 1.11"
-RationalFunctionFields = "0.2.0"
+RationalFunctionFields = "0.1, 0.2"
 SpecialFunctions = "2"
 SymbolicUtils = "3.27"
 Symbolics = "6.40"
