CompatHelper: bump compat for SymbolicUtils in [weakdeps] to 4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -50,7 +50,7 @@ Primes = "0.5"
 Random = "1.10, 1.11"
 RationalFunctionFields = "0.2.1"
 SpecialFunctions = "2"
-SymbolicUtils = "3.32"
+SymbolicUtils = "3.32, 4"
 Symbolics = "6.55"
 Test = "1.10, 1.11"
 TestSetExtensions = "2"
