--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ CPUSummary = "0.2"
 Combinatorics = "1"
 DataStructures = "0.18, 0.19"
 Dates = "1.10, 1.11"
-Groebner = "0.9"
+Groebner = "0.9, 0.10"
 IterTools = "1"
 LinearAlgebra = "1.10, 1.11"
 Logging = "1.10, 1.11"
