Add function reparametrize_interactive
This new function allows:
- Selecting reparametrization from a pool of identifiable functions.
- Specifying custom functions for reparametrization.
- Assigning names to new variables.

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "StructuralIdentifiability"
 uuid = "220ca800-aa68-49bb-acd8-6037fa93a544"
-authors = ["Alexander Demin, Ruiwen Dong, Christian Goodbrake, Heather Harrington, Gleb Pogudin <gleb.pogudin@polytechnique.edu>"]
 version = "0.5.17"
+authors = ["Alexander Demin, Ruiwen Dong, Christian Goodbrake, Heather Harrington, Gleb Pogudin <gleb.pogudin@polytechnique.edu>"]
 
 [deps]
 AbstractAlgebra = "c3fe647b-3220-5bb0-a1ea-a7954cac585d"
@@ -17,6 +17,7 @@ Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 ParamPunPam = "3e851597-e36f-45a9-af0a-b7781937992f"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
+REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RationalFunctionFields = "73480bc8-48a2-41cc-880f-208b490ccf65"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
@@ -47,6 +48,7 @@ ParamPunPam = "0.5.5"
 Pkg = "1.10, 1.11"
 PrecompileTools = "1.2"
 Primes = "0.5"
+REPL = "1.11"
 Random = "1.10, 1.11"
 RationalFunctionFields = "0.2.2"
 SpecialFunctions = "2"
