Update REPL version

--- a/Project.toml
+++ b/Project.toml
@@ -48,7 +48,7 @@ ParamPunPam = "0.5.5"
 Pkg = "1.10, 1.11"
 PrecompileTools = "1.2"
 Primes = "0.5"
-REPL = "1.11"
+REPL = "1.10, 1.11"
 Random = "1.10, 1.11"
 RationalFunctionFields = "0.2.2"
 SpecialFunctions = "2"
