CompatHelper: bump compat for Symbolics in [weakdeps] to 7, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "StructuralIdentifiability"
 uuid = "220ca800-aa68-49bb-acd8-6037fa93a544"
-authors = ["Alexander Demin, Ruiwen Dong, Christian Goodbrake, Heather Harrington, Gleb Pogudin <gleb.pogudin@polytechnique.edu>"]
 version = "0.5.17"
+authors = ["Alexander Demin, Ruiwen Dong, Christian Goodbrake, Heather Harrington, Gleb Pogudin <gleb.pogudin@polytechnique.edu>"]
 
 [deps]
 AbstractAlgebra = "c3fe647b-3220-5bb0-a1ea-a7954cac585d"
@@ -51,7 +51,7 @@ Random = "1.10, 1.11"
 RationalFunctionFields = "0.2.2"
 SpecialFunctions = "2"
 SymbolicUtils = "3.32, 4"
-Symbolics = "6.56"
+Symbolics = "6.56, 7"
 Test = "1.10, 1.11"
 TestSetExtensions = "2"
 TimerOutputs = "0.5.10"
