--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -7,6 +7,7 @@ jobs:
   CompatHelper:
     runs-on: ubuntu-latest
     steps:
+      - uses: julia-actions/setup-julia@v2 with: version: '1'
       - name: "Install CompatHelper"
         run: |
           import Pkg
