--- a/Project.toml
+++ b/Project.toml
@@ -53,7 +53,7 @@ SpecialFunctions = "2"
 SymbolicUtils = "3.32, 4"
 Symbolics = "6.56, 7"
 Test = "1.10, 1.11"
-TestSetExtensions = "2"
+TestSetExtensions = "2, 3"
 TimerOutputs = "0.5.10"
 julia = "1.10.4, 1.11.2"
 
