updating the MTK-related code

--- a/Project.toml
+++ b/Project.toml
@@ -22,12 +22,12 @@ RationalFunctionFields = "73480bc8-48a2-41cc-880f-208b490ccf65"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [weakdeps]
-ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+ModelingToolkitBase = "7771a370-6774-4173-bd38-47e70ca0b839"
 SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [extensions]
-ModelingToolkitSIExt = ["ModelingToolkit", "SymbolicUtils", "Symbolics"]
+ModelingToolkitSIExt = ["ModelingToolkitBase", "SymbolicUtils", "Symbolics"]
 
 [compat]
 AbstractAlgebra = "0.42, 0.43, 0.44, 0.45, 0.46, 0.47"
@@ -41,7 +41,7 @@ IterTools = "1"
 LinearAlgebra = "1.10, 1.11"
 Logging = "1.10, 1.11"
 MacroTools = "0.5"
-ModelingToolkit = "10.22, 11"
+ModelingToolkitBase = "1.1.0"
 Nemo = "0.46, 0.47, 0.48, 0.49, 0.50, 0.51, 0.52"
 ParamPunPam = "0.5.5"
 Pkg = "1.10, 1.11"
@@ -50,8 +50,8 @@ Primes = "0.5"
 Random = "1.10, 1.11"
 RationalFunctionFields = "0.2.2"
 SpecialFunctions = "2"
-SymbolicUtils = "3.32, 4"
-Symbolics = "6.56, 7"
+SymbolicUtils = "4"
+Symbolics = "7"
 Test = "1.10, 1.11"
 TestSetExtensions = "2, 3"
 TimerOutputs = "0.5.10"
@@ -60,7 +60,7 @@ julia = "1.10.4, 1.11.2"
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
-ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
+ModelingToolkitBase = "7771a370-6774-4173-bd38-47e70ca0b839"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 SymbolicUtils = "d1185830-fcd6-423d-90d6-eec64667417b"
