temporarily decoupling CI for MTK extension

--- a/.github/workflows/CI_extensions.yml
+++ b/.github/workflows/CI_extensions.yml
@@ -12,11 +12,9 @@ jobs:
     strategy:
       matrix:
         group:
-          - Core
-          - QA
+          - ModelingToolkitSIExt
         version:
           - '1'
-          - 'lts'
           - 'pre'
     steps:
       - uses: actions/checkout@v6
