CompatHelper: bump compat for AbstractAlgebra to 0.48, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 ModelingToolkitSIExt = ["ModelingToolkitBase", "SymbolicUtils", "Symbolics"]
 
 [compat]
-AbstractAlgebra = "0.42, 0.43, 0.44, 0.45, 0.46, 0.47"
+AbstractAlgebra = "0.42, 0.43, 0.44, 0.45, 0.46, 0.47, 0.48"
 Aqua = "0.8"
 CPUSummary = "0.2"
 Combinatorics = "1"
